# humanoid-rl-deploy-cpp

./: Makefile  README.md  README_cn.md
ament/: local_setup.sh  setup.sh
ament/ament_cmake/share/ament_cmake/: local_setup.sh  package.sh
ament/ament_cmake/share/ament_index/resource_index/parent_prefix_path/: ament_cmake
ament/ament_cmake_auto/share/ament_cmake_auto/: local_setup.sh  package.sh
ament/ament_cmake_auto/share/ament_index/resource_index/parent_prefix_path/: ament_cmake_auto
ament/ament_cmake_core/share/ament_cmake_core/: local_setup.sh  package.sh
ament/ament_cmake_core/share/ament_index/resource_index/parent_prefix_path/: ament_cmake_core
ament/ament_cmake_export_definitions/share/ament_cmake_export_definitions/: local_setup.sh  package.sh
ament/ament_cmake_export_definitions/share/ament_index/resource_index/parent_prefix_path/: ament_cmake_export_definitions
ament/ament_cmake_export_dependencies/share/ament_cmake_export_dependencies/: local_setup.sh  package.sh
ament/ament_cmake_export_include_directories/share/ament_cmake_export_include_directories/: local_setup.sh  package.sh
ament/ament_cmake_export_interfaces/share/ament_cmake_export_interfaces/: local_setup.sh  package.sh
ament/ament_cmake_export_libraries/share/ament_cmake_export_libraries/: local_setup.sh  package.sh
ament/ament_cmake_export_link_flags/share/ament_cmake_export_link_flags/: local_setup.sh  package.sh
ament/ament_cmake_export_targets/share/ament_cmake_export_targets/: local_setup.sh  package.sh
ament/ament_cmake_gmock/share/ament_cmake_gmock/: local_setup.sh  package.sh
ament/ament_cmake_gmock/share/ament_index/resource_index/parent_prefix_path/: ament_cmake_gmock
ament/ament_cmake_google_benchmark/share/ament_cmake_google_benchmark/: local_setup.sh  package.sh
ament/ament_cmake_gtest/share/ament_cmake_gtest/: local_setup.sh  package.sh
ament/ament_cmake_include_directories/share/ament_cmake_include_directories/: local_setup.sh  package.sh
ament/ament_cmake_libraries/share/ament_cmake_libraries/: local_setup.sh  package.sh
ament/ament_cmake_nose/share/ament_cmake_nose/: local_setup.sh  package.sh
ament/ament_cmake_pytest/share/ament_cmake_pytest/: local_setup.sh  package.sh
ament/ament_cmake_python/share/ament_cmake_python/: local_setup.sh  package.sh
ament/ament_cmake_target_dependencies/share/ament_cmake_target_dependencies/: local_setup.sh  package.sh
ament/ament_cmake_test/share/ament_cmake_test/: local_setup.sh  package.sh
ament/ament_cmake_version/share/ament_cmake_version/: local_setup.sh  package.sh
ament/ament_package/share/ament_package/: package.sh
src/humanoid-rl-deploy-cpp/robot_controllers/damping_controller/: CMakeLists.txt  package.xml
src/humanoid-rl-deploy-cpp/robot_controllers/damping_controller/config/HU_D03_03/: param.yaml
src/humanoid-rl-deploy-cpp/robot_controllers/damping_controller/include/: DampingController.h
src/humanoid-rl-deploy-cpp/robot_controllers/damping_controller/src/: DampingController.cpp
src/humanoid-rl-deploy-cpp/robot_controllers/mimic_controller/: CMakeLists.txt  package.xml
src/humanoid-rl-deploy-cpp/robot_controllers/mimic_controller/config/HU_D03_03/: param.yaml
src/humanoid-rl-deploy-cpp/robot_controllers/mimic_controller/include/: MimicController.h
src/humanoid-rl-deploy-cpp/robot_controllers/mimic_controller/src/: MimicController.cpp
src/humanoid-rl-deploy-cpp/robot_controllers/stand_controller/: CMakeLists.txt  package.xml
src/humanoid-rl-deploy-cpp/robot_controllers/stand_controller/config/HU_D03_03/: param.yaml
src/humanoid-rl-deploy-cpp/robot_controllers/stand_controller/include/: StandController.h
src/humanoid-rl-deploy-cpp/robot_controllers/stand_controller/src/: StandController.cpp
src/humanoid-rl-deploy-cpp/robot_hw/: CMakeLists.txt  main.cpp  package.xml  robot_controllers.yaml
src/humanoid-rl-deploy-cpp/robot_joystick/: CMakeLists.txt  package.xml
src/humanoid-rl-deploy-cpp/robot_joystick/include/: RobotJoystick.h
src/humanoid-rl-deploy-cpp/robot_joystick/src/: RobotJoystick.cpp
(+6 files in other folders)
