<?xml version="1.0"?>
<package format="3">
  <name>damping_controller</name>
  <version>0.0.0</version>
  <description>damping_controller</description>
  <maintainer email="limx@limxdynamics.com">limxdynamics</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>limxsdk_lowlevel</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>